readme file updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section>
         <main>
             <!-- Error Message Display -->
-            <h2 id="error-message" class="text-center">Please try again later</h2>
+            <h2 id="error-message"  class="text-center text-danger">Please try again later</h2>
 
             
             <!-- Cards For Books -->
