readme file updated

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
    <!-- Main Section Starts -->
     <section>
         <main>
+           
             <!-- Error Message Display -->
-            <h2 id="error-message"  class="text-center text-danger">Please try again later</h2>
+            <h2 id="error-message"  class="text-center"></h2>
 
             
             <!-- Cards For Books -->
